# insurance-demand

./: README.md  pyproject.toml
.github/workflows/: docs.yml  tests.yml
benchmarks/: run_benchmark.py
notebooks/: benchmark.py  demo.py  quickstart.ipynb  run_tests.py
src/insurance_demand/: __init__.py  compliance.py  conversion.py  datasets.py  demand_curve.py  elasticity.py  optimiser.py  retention.py
tests/: test_compliance.py  test_conversion.py  test_datasets.py  test_demand_curve.py  test_optimiser.py  test_retention.py
