[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-demand"
version = "0.2.0"
description = "Deprecated — use insurance-optimise instead"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Burning Cost", email = "pricing.frontier@gmail.com" },
]
keywords = [
    "insurance",
    "demand",
    "price elasticity",
    "conversion",
    "retention",
    "actuarial",
]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "insurance-optimise>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-demand"
Repository = "https://github.com/burning-cost/insurance-demand"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_demand"]
